# sublimine-ids

./: .gitignore  Makefile  README.md  _AUDIT_PHASE012.txt  _AUDIT_PHASE3.txt  _AUDIT_gitlog.txt  _AUDIT_gitstatus.txt  _AUDIT_live_files.txt  _AUDIT_pytest.txt  _audit_bundle_phase2.txt  pyproject.toml  requirements.txt
config/: sublimine.yaml
src/sublimine/: config.py  live.py  run.py
src/sublimine/contracts/: types.py
src/sublimine/core/: bus.py  clock.py  ids.py  journal.py  replay.py  state.py
src/sublimine/events/: detectors.py  microbars.py  scoring.py  setups.py
src/sublimine/exec/: mt5_adapter.py  oms.py  router.py
src/sublimine/features/: __init__.py  basis.py  book_features.py  feature_engine.py  iceberg.py  ofi.py  spoof.py  vpin.py
src/sublimine/feeds/: binance_ws.py  book.py  bybit_ws.py  ws_common.py
src/sublimine/health/: __init__.py  health.py  state.py
src/sublimine/risk/: gates.py  phases.py
tests/: test_alignment_gate_blocks_intent.py  test_book_binance_apply.py  test_book_bybit_apply.py  test_config_active_phase_validation.py  test_consensus_gates.py  test_engine_guard_transitions.py  test_events_detectors.py  test_features_microprice_ofi.py  test_health_scoring.py  test_ids_clock.py  test_live_mode_guard.py  test_live_resync_policy.py  test_microbars_builder.py  test_playbook_direction_routing.py  test_replay_pipeline.py  test_router_paper_exec.py  test_setups_afs.py  test_setups_dlv.py  test_setups_per.py  test_setups_saf.py  test_sizer_math.py
tests/data/: replay.jsonl
tools/: audit.ps1  audit_bundle.py
(+1 files in other folders)
