[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sublimine-ids"
version = "0.1.0"
description = "SUBLIMINE IDS v2.1 event-driven trading engine (shadow mode)"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
norecursedirs = ["tests/_tmp", ".tmp", ".pytest_tmp", "pytest_tmp", "tmp2"]
